[package]
    name = "zero2prod"
    version = "0.1.0"
    edition = "2021"

[lib]
    path = "src/lib.rs"

[[bin]]
    path = "src/main.rs"
    name = "zero2prod"

[dependencies]
    actix-web = "4"
    tokio = { version = "1", features = ["full"] }
    mini-redis = "0.4"

[dev-dependencies]
    reqwest = "0.11"

[target.aarch64-apple-darwin]
    rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
